--- a/docs-1/Tasks/Task8.html
+++ b/docs-1/Tasks/Task8.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recap: Bootstrap Session</title>
         <!-- custom css stylesheet -->
-        <link rel="stylesheet" type="text/css" href="./styles.css">
+        <link rel="stylesheet" type="text/css" href="./Task8.css">
 
         <!-- bootstrap cdn -->
         <link rel="stylesheet"
@@ -100,6 +100,5 @@
             </div>
         </div>
 
-        <script src="./script.js"></script>
     </body>
 </html>
